# vipey

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  build_frontend.bat  build_frontend.sh  demo.py  pyproject.toml  test_demo.py  test_features.py  test_interactive.py
docs/: ADVANCED_VISUALIZATIONS_v0.4.0.md  BUG_FIXES_v0.3.1.md  FEATURE_SHOWCASE.md  FINAL_IMPLEMENTATION.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY2.md  IMPLEMENTATION_SUMMARY3.md  QUICKREF.md  QUICK_REFERENCE.md  UI_DEMO.md  USAGE.md
examples/: avl.py  binary_search.py  fibonacci.py  graphs.py  hash.py  reverse_k_group.py  stacks_queues.py  trees.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArrayVisualizer.tsx  CodePane.tsx  Controls.tsx  GraphVisualizer.tsx  HashMapVisualizer.tsx  LinkedListVisualizer.tsx  TreeVisualizer.tsx  VisualizationPane.tsx
project-analyzer-main/: QUICK_START.md  README.md  TEST_EXECUTION_REPORT.md  TEST_RESULTS_SUMMARY.md  nextgen_analysis_20251020_185833.txt  project-analyzer.py  requirements.txt
tests/: test_analyzer.py  test_data_structures.py  test_interactive.py  test_tracer.py
vipey/: __init__.py  analyzer.py  ast_parser.py  renderer.py  tracer.py
vipey/templates/: index.html
vipey/templates/assets/: index-00014e0e.js  index-03c6ddfd.js  index-43a9dc38.js  index-79cb7e91.css  index-b94bbcda.css
