[project]
name = "vipey"
version = "0.2.0"
description = "A comprehensive Python visualization and analysis tool for algorithm execution, code intelligence, and project analytics"
authors = [
    {name = "Abdul Ahad", email = "099ahadabdul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "gitpython>=3.1.0",
    "humanize>=4.6.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vipey"]

[tool.hatch.build.targets.wheel.force-include]
"vipey/templates" = "vipey/templates"
